--- a/src/app/indicator-sharing/indicator-card/indicator-card.component.scss
+++ b/src/app/indicator-sharing/indicator-card/indicator-card.component.scss
@@ -50,3 +50,12 @@
         }
     }
 }
+
+#mainContent {
+    max-height: 270px;
+    overflow: hidden;
+    position: relative;
+    &.fullHeight {
+        max-height: 100%;
+    }
+}
