--- a/src/styles/partials/_styles.scss
+++ b/src/styles/partials/_styles.scss
@@ -235,7 +235,7 @@ a {
 }
 
 .lightH3 {
-    font-size: 22px;
+    font-size: 21px;
     font-weight: 300;
 }
 
@@ -317,4 +317,15 @@ svg {
 
 }
 
-
+.fadeBottom {
+  &:after {
+    content: " ";
+    width: 100%;
+    height: 40px;
+    background: linear-gradient( rgba(255, 255, 255, 0.0) 0%, rgba(255, 255, 255, 0.7) 50%, rgba(255, 255, 255, 1) 100%);
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+}
