--- a/src/app/indicator-sharing/indicator-card/indicator-card.component.scss
+++ b/src/app/indicator-sharing/indicator-card/indicator-card.component.scss
@@ -52,10 +52,10 @@
 }
 
 #mainContent {
-    max-height: 270px;
+    // max-height: 270px;
     overflow: hidden;
     position: relative;
     &.fullHeight {
-        max-height: 100%;
+        // max-height: 100%;
     }
 }
